Se agrego la seccion de comprar membresias + CSS

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body>
+    <!-- Header o encabezado de la pagina principal, este apartado abarca toda la parte
+         del menu de navegacion y la primera imagen del pagina -->
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
@@ -52,6 +54,94 @@
             <a href="" class="cta">Comienza ahora</a>
         </section>
     </header>
+
+
+    <main>
+        <section class="container abouter">
+            <h2 class="subtitle">¿Qué aprenderás en este curso?</h2>
+            <p class="about__paragraph">Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties,
+                Position, Animaciones, Box model y más)</p>
+
+            <div class="about__main">
+                <article class="about__icons">
+                    <img src="../IMAGES/shapes.svg" class="about__icon">
+                    <h3>CSS Layouts</h3>
+                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas ipsa
+                        mollitia vero.</p>
+                </article>
+                <article class="about__icons">
+                    <img src="../IMAGES/paint.svg" class="about__icon">
+                    <h3>Animaciones</h3>
+                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas ipsa
+                        mollitia vero.</p>
+                </article>
+                <article class="about__icons">
+                    <img src="../IMAGES/code.svg" class="about__icon">
+                    <h3>Sass</h3>
+                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas ipsa
+                        mollitia vero.</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="knowledge">
+            <div class="knowledge__container container">
+                <div class="knowledge__texts">
+                    <h2 class="subtitle">Curso completo de CSS. ¡Domina CSS de una vez por todas!</h2>
+                    <p class="knowledge__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+                        necessitatibus adipisci fugit maiores! Voluptatibus cum ut odio ad hic temporibus commodi sunt
+                        distinctio eligendi perspiciatis maiores, fugit, dignissimos numquam adipisci.</p>
+                    <a href="" class="cta">Entra la curso</a>
+                </div>
+                <figure class="knowledge__picture">
+                    <img src="../IMAGES/macbook.png" class="knowledge__img">
+                </figure>
+            </div>
+        </section>
+
+        <section class="price container">
+            <h2 class="subtitle">Obten el price perfecto para aprender</h2>
+            <div class="price__table">
+                <div class="price__element">
+                    <p class="price__name">Flexbox</p>
+                    <h3 class="price__price">Free</h3>
+
+                    <div class="price__items">
+                        <p class="price__feratures">Flexbox</p>
+                        <p class="price__feratures">Layouts</p>
+                        <p class="price__feratures">Responsive</p>
+                    </div>
+                    <a href="" class="price__cta">Empieza ahora</a>
+                </div>
+
+                <div class="price__element price__element--best">
+                    <p class="price__name">Grid</p>
+                    <h3 class="price__price">$30/mes</h3>
+
+                    <div class="price__items">
+                        <p class="price__feratures">Grid</p>
+                        <p class="price__feratures">Implicit Grid</p>
+                        <p class="price__feratures">Responsive</p>
+                    </div>
+                    <a href="" class="price__cta">Empieza ahora</a>
+                </div>
+
+                <div class="price__element">
+                    <p class="price__name">Animaciones</p>
+                    <h3 class="price__price">$40/mes</h3>
+
+                    <div class="price__items">
+                        <p class="price__feratures">Animation</p>
+                        <p class="price__feratures">Transition</p>
+                        <p class="price__feratures">Render Website</p>
+                    </div>
+                    <a href="" class="price__cta">Empieza ahora</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
 </body>
 
 </html>
