Se creo la parte del slider de la pagina + CSS

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -139,6 +139,53 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="testimony__container container">
+                <img src="../IMAGES/leftarrow.svg" class="testimony__arrow" id="before">
+
+                <section class="testimony__body testimony__body--show" data-id="1">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Mi nombre es Elvira Maria Diaz, <span
+                                class="testimony__course">estudiante de CSS</span> </h2>
+                        <p class="testimony__review">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur ratione saepe veritatis ullam rerum placeat odio cumque molestias qui adipisci
+                            aliquid quidem corrupti tempora fugiat, provident quia voluptatibus distinctio illo!</p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="../IMAGES/face.jpg" class="testimony__img">
+                    </figure>
+                </section>
+
+                <section class="testimony__body " data-id="2">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Mi nombre es Juan Carlos Bohorquez, <span
+                                class="testimony__course">estudiante de CSS</span> </h2>
+                        <p class="testimony__review">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur ratione saepe veritatis ullam </p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="../IMAGES/face4.jpg" class="testimony__img">
+                    </figure>
+                </section>
+
+                <section class="testimony__body" data-id="3">
+                    <div class="testimony__texts">
+                        <h2 class="subtitle">Mi nombre es Jordan Alexander, <span
+                                class="testimony__course">estudiante de CSS</span> </h2>
+                        <p class="testimony__review">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur ratione saepe veritatis ullam rerum placeat odio cumque molestias qui adipisci
+                            aliquid quidem corrupti tempora fugiat, provident quia voluptatibus distinctio illo!</p>
+                    </div>
+                    <figure class="testimony__picture">
+                        <img src="../IMAGES/face3.jpg" class="testimony__img">
+                    </figure>
+                </section>
+                <img src="../IMAGES/rightarrow.svg" class="testimony__arrow" id="next">
+            </div>
+
+        </section>
+
     </main>
 
 
