Se le aplico algo de JAVASCRIPT al slider
Medienta el archivo .JS se le aplico a la parte del slider un poco de animacion al momento de darle al botones de NEXT y BEFORE para que cambiaran  a diferentes slider

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,7 @@
          del menu de navegacion y la primera imagen del pagina -->
     <header class="hero">
         <nav class="nav container">
+
             <div class="nav__logo">
                 <h2 class="nav__title">Curso CSS.</h2>
             </div>
@@ -40,11 +41,15 @@
 
                 <img src="../IMAGES/close.svg" class="nav__close" />
             </ul>
+
             <div class="nav__menu">
                 <img src="../IMAGES/menu.svg" class="nav_img" />
             </div>
+
         </nav>
+
         <section class="hero__container container">
+
             <h1 class="hero__title">Aprende CSS desde CERO hasta dominarlo</h1>
             <p class="hero__paragraph">
                 Eige aprender de una vez por todas, una vez que termines este curso
@@ -52,55 +57,82 @@
                 animaciones
             </p>
             <a href="" class="cta">Comienza ahora</a>
+
         </section>
     </header>
 
-
     <main>
+
         <section class="container abouter">
+
             <h2 class="subtitle">¿Qué aprenderás en este curso?</h2>
-            <p class="about__paragraph">Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties,
-                Position, Animaciones, Box model y más)</p>
+            <p class="about__paragraph">
+                Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom
+                properties, Position, Animaciones, Box model y más)
+            </p>
 
             <div class="about__main">
+
                 <article class="about__icons">
-                    <img src="../IMAGES/shapes.svg" class="about__icon">
+                    <img src="../IMAGES/shapes.svg" class="about__icon" />
                     <h3>CSS Layouts</h3>
-                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas ipsa
-                        mollitia vero.</p>
+                    <p class="about__paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        quas ipsa mollitia vero.
+                    </p>
                 </article>
+
                 <article class="about__icons">
-                    <img src="../IMAGES/paint.svg" class="about__icon">
+                    <img src="../IMAGES/paint.svg" class="about__icon" />
                     <h3>Animaciones</h3>
-                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas ipsa
-                        mollitia vero.</p>
+                    <p class="about__paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        quas ipsa mollitia vero.
+                    </p>
                 </article>
+
                 <article class="about__icons">
-                    <img src="../IMAGES/code.svg" class="about__icon">
+                    <img src="../IMAGES/code.svg" class="about__icon" />
                     <h3>Sass</h3>
-                    <p class="about__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas ipsa
-                        mollitia vero.</p>
+                    <p class="about__paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        quas ipsa mollitia vero.
+                    </p>
                 </article>
+
             </div>
+
         </section>
 
         <section class="knowledge">
+
             <div class="knowledge__container container">
+
                 <div class="knowledge__texts">
-                    <h2 class="subtitle">Curso completo de CSS. ¡Domina CSS de una vez por todas!</h2>
-                    <p class="knowledge__paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-                        necessitatibus adipisci fugit maiores! Voluptatibus cum ut odio ad hic temporibus commodi sunt
-                        distinctio eligendi perspiciatis maiores, fugit, dignissimos numquam adipisci.</p>
+                    <h2 class="subtitle">
+                        Curso completo de CSS. ¡Domina CSS de una vez por todas!
+                    </h2>
+                    <p class="knowledge__paragraph">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+                        necessitatibus adipisci fugit maiores! Voluptatibus cum ut odio ad
+                        hic temporibus commodi sunt distinctio eligendi perspiciatis
+                        maiores, fugit, dignissimos numquam adipisci.
+                    </p>
                     <a href="" class="cta">Entra la curso</a>
                 </div>
+
                 <figure class="knowledge__picture">
-                    <img src="../IMAGES/macbook.png" class="knowledge__img">
+                    <img src="../IMAGES/macbook.png" class="knowledge__img" />
                 </figure>
+
             </div>
+
         </section>
 
         <section class="price container">
+
             <h2 class="subtitle">Obten el price perfecto para aprender</h2>
+
             <div class="price__table">
                 <div class="price__element">
                     <p class="price__name">Flexbox</p>
@@ -137,58 +169,87 @@
                     </div>
                     <a href="" class="price__cta">Empieza ahora</a>
                 </div>
+
             </div>
+
         </section>
 
         <section>
+
             <div class="testimony__container container">
-                <img src="../IMAGES/leftarrow.svg" class="testimony__arrow" id="before">
+                <img src="../IMAGES/leftarrow.svg" class="testimony__arrow" id="before" />
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Elvira Maria Diaz, <span
-                                class="testimony__course">estudiante de CSS</span> </h2>
-                        <p class="testimony__review">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Consequuntur ratione saepe veritatis ullam rerum placeat odio cumque molestias qui adipisci
-                            aliquid quidem corrupti tempora fugiat, provident quia voluptatibus distinctio illo!</p>
+                        <h2 class="subtitle">
+                            Mi nombre es Elvira Maria Diaz,
+                            <span class="testimony__course">estudiante de CSS</span>
+                        </h2>
+                        <p class="testimony__review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur ratione saepe veritatis ullam rerum placeat odio
+                            cumque molestias qui adipisci aliquid quidem corrupti tempora
+                            fugiat, provident quia voluptatibus distinctio illo!
+                        </p>
                     </div>
+
                     <figure class="testimony__picture">
-                        <img src="../IMAGES/face.jpg" class="testimony__img">
+                        <img src="../IMAGES/face.jpg" class="testimony__img" />
                     </figure>
+
                 </section>
 
-                <section class="testimony__body " data-id="2">
+                <section class="testimony__body" data-id="2">
+
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Juan Carlos Bohorquez, <span
-                                class="testimony__course">estudiante de CSS</span> </h2>
-                        <p class="testimony__review">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Consequuntur ratione saepe veritatis ullam </p>
+                        <h2 class="subtitle">
+                            Mi nombre es Juan Carlos Bohorquez,
+                            <span class="testimony__course">estudiante de CSS</span>
+                        </h2>
+                        <p class="testimony__review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur ratione saepe veritatis ullam
+                        </p>
+
                     </div>
+
                     <figure class="testimony__picture">
-                        <img src="../IMAGES/face4.jpg" class="testimony__img">
+                        <img src="../IMAGES/face4.jpg" class="testimony__img" />
                     </figure>
+
                 </section>
 
                 <section class="testimony__body" data-id="3">
+
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Jordan Alexander, <span
-                                class="testimony__course">estudiante de CSS</span> </h2>
-                        <p class="testimony__review">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Consequuntur ratione saepe veritatis ullam rerum placeat odio cumque molestias qui adipisci
-                            aliquid quidem corrupti tempora fugiat, provident quia voluptatibus distinctio illo!</p>
+
+                        <h2 class="subtitle">
+                            Mi nombre es Jordan Alexander,
+                            <span class="testimony__course">estudiante de CSS</span>
+                        </h2>
+                        <p class="testimony__review">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur ratione saepe veritatis ullam rerum placeat odio
+                            cumque molestias qui adipisci aliquid quidem corrupti tempora
+                            fugiat, provident quia voluptatibus distinctio illo!
+                        </p>
+
                     </div>
+
                     <figure class="testimony__picture">
-                        <img src="../IMAGES/face3.jpg" class="testimony__img">
+                        <img src="../IMAGES/face3.jpg" class="testimony__img" />
                     </figure>
+
                 </section>
-                <img src="../IMAGES/rightarrow.svg" class="testimony__arrow" id="next">
+
+                <img src="../IMAGES/rightarrow.svg" class="testimony__arrow" id="next" />
+
             </div>
 
         </section>
 
     </main>
-
-
+    <script src="../JAVASCRIPT/slider.js"></script>
 </body>
 
 </html>
