Creamos la section de pregunta frecuentes y su CSS

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -52,7 +52,7 @@
 
             <h1 class="hero__title">Aprende CSS desde CERO hasta dominarlo</h1>
             <p class="hero__paragraph">
-                Eige aprender de una vez por todas, una vez que termines este curso
+                Elige aprender de una vez por todas, una vez que termines este curso
                 serás capaz de crear cualquier layout con CSS y crear tus propias
                 animaciones
             </p>
@@ -62,7 +62,7 @@
     </header>
 
     <main>
-
+        <!-- Creamos la section 2 de, ¿Qué aprenderás en este curso? donde se explica una breve reseña lo que aprenderas en curdo de CSS -->
         <section class="container abouter">
 
             <h2 class="subtitle">¿Qué aprenderás en este curso?</h2>
@@ -105,6 +105,7 @@
         </section>
 
         <section class="knowledge">
+            <!-- Creamos la section 3 de, Curso completo de CSS. ¡Domina CSS de una vez por todas! -->
 
             <div class="knowledge__container container">
 
@@ -130,6 +131,9 @@
         </section>
 
         <section class="price container">
+            <!-- Creamos la section 4 de, Obten el price perfecto para aprender, 
+                donde estan tres cajas con diferentes tipos de paquetes y precios 
+                y una breve reseña de lo que trae el paquetea comprar-->
 
             <h2 class="subtitle">Obten el price perfecto para aprender</h2>
 
@@ -175,6 +179,9 @@
         </section>
 
         <section>
+            <!-- Creamos la section 5 de, donde se elabora un slider y dentro del slider
+                se especica el nombre del estudiante y una pequeña biografia acerca de el y 
+                la imagen del estudiante-->
 
             <div class="testimony__container container">
                 <img src="../IMAGES/leftarrow.svg" class="testimony__arrow" id="before" />
@@ -182,7 +189,7 @@
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
                         <h2 class="subtitle">
-                            Mi nombre es Elvira Maria Diaz,
+                            Mi nombre es Elvira Maria Diaz
                             <span class="testimony__course">estudiante de CSS</span>
                         </h2>
                         <p class="testimony__review">
@@ -203,7 +210,7 @@
 
                     <div class="testimony__texts">
                         <h2 class="subtitle">
-                            Mi nombre es Juan Carlos Bohorquez,
+                            Mi nombre es Juan Carlos Bohorquez
                             <span class="testimony__course">estudiante de CSS</span>
                         </h2>
                         <p class="testimony__review">
@@ -224,7 +231,7 @@
                     <div class="testimony__texts">
 
                         <h2 class="subtitle">
-                            Mi nombre es Jordan Alexander,
+                            Mi nombre es Jordan Alexander
                             <span class="testimony__course">estudiante de CSS</span>
                         </h2>
                         <p class="testimony__review">
@@ -246,6 +253,70 @@
 
             </div>
 
+        </section>
+
+        <section class="questions container">
+            <h2 class="subtitle">Preguntas frecuentes</h2>
+            <p class="question__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias fugiat
+                dolore corrupti numquam animi?</p>
+            <section class="questions__container">
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Qué es CSS?
+                            <span class="questions__arrow">
+                                <img src="../IMAGES/arrow.svg" class="testimony__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, veniam, maiores libero
+                            quod consequatur sunt eius asperiores consectetur, quos tempore doloribus! Laboriosam
+                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam illo repudiandae! Fuga
+                            obcaecati tempora vel. Laudantium, voluptates ratione quasi, nihil est alias molestias saepe
+                            pariatur sit repudiandae magni provident tempora neque quibusdam, nulla ab exercitationem in
+                            dolorem. Ad at culpa vero ex. Commodi neque cumque numquam?
+                        </p>
+                    </div>
+                </article>
+
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Qué es CSS?
+                            <span class="questions__arrow">
+                                <img src="../IMAGES/arrow.svg" class="testimony__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, veniam, maiores libero
+                            quod consequatur sunt eius asperiores consectetur, quos tempore doloribus! Laboriosam
+                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam illo repudiandae! Fuga
+                            obcaecati tempora vel. Laudantium, voluptates ratione quasi, nihil est alias molestias saepe
+                            pariatur sit repudiandae magni provident tempora neque quibusdam, nulla ab exercitationem in
+                            dolorem. Ad at culpa vero ex. Commodi neque cumque numquam?
+                        </p>
+                    </div>
+                </article>
+
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Qué es CSS?
+                            <span class="questions__arrow">
+                                <img src="../IMAGES/arrow.svg" class="testimony__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, veniam, maiores libero
+                            quod consequatur sunt eius asperiores consectetur, quos tempore doloribus! Laboriosam
+                            aperiam maxime rem iusto error sequi in, aut iste cumque magnam illo repudiandae! Fuga
+                            obcaecati tempora vel. Laudantium, voluptates ratione quasi, nihil est alias molestias saepe
+                            pariatur sit repudiandae magni provident tempora neque quibusdam, nulla ab exercitationem in
+                            dolorem. Ad at culpa vero ex. Commodi neque cumque numquam?
+                        </p>
+                    </div>
+                </article>
+            </section>
         </section>
 
     </main>
