Se creo la parte de preguntas frecuentes
Se agrego la parte de HTML de preguntas frecuentes, tambien se elaboro su diseño en CSS y aparte de creo un archivo JS donde se abre la pregunta la cual queremos obtener informacion

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -104,9 +104,8 @@
 
         </section>
 
+        <!-- Creamos la section 3 de, Curso completo de CSS. ¡Domina CSS de una vez por todas! -->
         <section class="knowledge">
-            <!-- Creamos la section 3 de, Curso completo de CSS. ¡Domina CSS de una vez por todas! -->
-
             <div class="knowledge__container container">
 
                 <div class="knowledge__texts">
@@ -130,12 +129,11 @@
 
         </section>
 
-        <section class="price container">
-            <!-- Creamos la section 4 de, Obten el price perfecto para aprender, 
+        <!-- Creamos la section 4 de, Obten el price perfecto para aprender, 
                 donde estan tres cajas con diferentes tipos de paquetes y precios 
                 y una breve reseña de lo que trae el paquetea comprar-->
-
-            <h2 class="subtitle">Obten el price perfecto para aprender</h2>
+        <section class="price container">
+            <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
 
             <div class="price__table">
                 <div class="price__element">
@@ -178,11 +176,10 @@
 
         </section>
 
-        <section>
-            <!-- Creamos la section 5 de, donde se elabora un slider y dentro del slider
+        <!-- Creamos la section 5 de, donde se elabora un slider y dentro del slider
                 se especica el nombre del estudiante y una pequeña biografia acerca de el y 
                 la imagen del estudiante-->
-
+        <section>
             <div class="testimony__container container">
                 <img src="../IMAGES/leftarrow.svg" class="testimony__arrow" id="before" />
 
@@ -255,16 +252,17 @@
 
         </section>
 
+        <!-- Creamos la section 6 de, Preguntas frecuentes, donde se elaboran 3 articulos con diferntes  temas relacionadas a las preguntas -->
         <section class="questions container">
             <h2 class="subtitle">Preguntas frecuentes</h2>
             <p class="question__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut alias fugiat
                 dolore corrupti numquam animi?</p>
             <section class="questions__container">
-                <article class="questions__padding">
+                <article class="questions__padding" id="change">
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Qué es CSS?
                             <span class="questions__arrow">
-                                <img src="../IMAGES/arrow.svg" class="testimony__img">
+                                <img src="../IMAGES/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
@@ -279,11 +277,11 @@
                     </div>
                 </article>
 
-                <article class="questions__padding">
+                <article class="questions__padding" id="change1">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es CSS?
+                        <h3 class="questions__title">¿Qué aprenderé en este curso?
                             <span class="questions__arrow">
-                                <img src="../IMAGES/arrow.svg" class="testimony__img">
+                                <img src="../IMAGES/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
@@ -298,11 +296,11 @@
                     </div>
                 </article>
 
-                <article class="questions__padding">
+                <article class="questions__padding" id="change2">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es CSS?
+                        <h3 class="questions__title">¿Qué es CSS GRID?
                             <span class="questions__arrow">
-                                <img src="../IMAGES/arrow.svg" class="testimony__img">
+                                <img src="../IMAGES/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
@@ -321,6 +319,7 @@
 
     </main>
     <script src="../JAVASCRIPT/slider.js"></script>
+    <script src="../JAVASCRIPT/questions.js"></script>
 </body>
 
 </html>
